Actualización del sitio

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Agentes de IA y automatización en Quito" />
-    <meta name="keywords" content="automatización, IA, agentes inteligentes, Quito, Ecuador" />
+    <meta name="description" content="DevsManager: soluciones tecnológicas, IA, automatización, sistemas web y apps para negocios en Quito y Ecuador." />
+    <meta name="keywords" content="automatización, IA, agentes inteligentes, sistemas web, apps móviles, integración, Quito, Ecuador" />
+    <meta name="author" content="Jefferson - DevsManager" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0a0d1a" />
+    <meta property="og:title" content="DevsManager | Soluciones tecnológicas e IA" />
+    <meta property="og:description" content="Automatización, IA y sistemas web a medida para negocios que quieren crecer." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_EC" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1677442136019-21780ecad995?w=1200&q=80" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>DevsManager | Agentes de IA y Automatización</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -204,6 +213,27 @@
             </div>
         </section>
 
+        <section class="section section-alt" id="proof">
+            <div class="container">
+                <h2>Resultados que se notan</h2>
+                <p class="section-lead">Procesos más rápidos, menos errores y mayor claridad en la operación diaria.</p>
+                <div class="proof-grid">
+                    <div class="proof-card">
+                        <h3>Tiempo optimizado</h3>
+                        <p>Automatizaciones que reducen tareas repetitivas y liberan horas de trabajo.</p>
+                    </div>
+                    <div class="proof-card">
+                        <h3>Mejor atención</h3>
+                        <p>Respuestas inmediatas y seguimiento constante sin depender de horarios.</p>
+                    </div>
+                    <div class="proof-card">
+                        <h3>Datos ordenados</h3>
+                        <p>Información centralizada para tomar decisiones con confianza.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section section-alt" id="examples">
             <div class="container">
                 <h2>Ejemplos de uso</h2>
@@ -309,6 +339,26 @@
             </div>
         </section>
 
+        <section class="section" id="faq">
+            <div class="container">
+                <h2>Preguntas frecuentes</h2>
+                <div class="faq-grid">
+                    <div class="faq-item">
+                        <h3>¿Trabajas con negocios pequeños y medianos?</h3>
+                        <p>Sí. Las soluciones se ajustan al tamaño y presupuesto de tu negocio.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>¿Puedo empezar por algo simple?</h3>
+                        <p>Claro. Podemos iniciar con una parte específica y escalar luego.</p>
+                    </div>
+                    <div class="faq-item">
+                        <h3>¿Qué necesito para comenzar?</h3>
+                        <p>Una breve reunión para entender tu proceso y definir prioridades.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="section contact" id="contact">
             <div class="container contact-grid">
                 <div>
@@ -336,6 +386,19 @@
         </section>
     </main>
 
+    <section class="ticker" aria-hidden="true">
+        <div class="ticker-track">
+            <span>Automatización inteligente</span>
+            <span>IA aplicada a negocios</span>
+            <span>Integraciones a medida</span>
+            <span>Resultados medibles</span>
+            <span>Automatización inteligente</span>
+            <span>IA aplicada a negocios</span>
+            <span>Integraciones a medida</span>
+            <span>Resultados medibles</span>
+        </div>
+    </section>
+
     <footer class="site-footer">
         <div class="container footer">
             <div>
@@ -347,6 +410,21 @@
     </footer>
 
     <script src="script.js"></script>
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "ProfessionalService",
+            "name": "DevsManager",
+            "areaServed": "Quito, Ecuador",
+            "description": "Soluciones tecnológicas, IA y automatización para negocios.",
+            "url": "https://devsmanager.com",
+            "contactPoint": {
+                "@type": "ContactPoint",
+                "telephone": "+593959186832",
+                "contactType": "customer service"
+            }
+        }
+    </script>
 </body>
 
 </html>
