Actualizo estilos actuales busqueda

--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Contacto DevsManager: agenda una consulta para implementar IA, automatizacion y sistemas web en tu negocio." />
+    <meta name="keywords" content="contacto DevsManager, consulta IA, automatizacion para negocios, WhatsApp consultoria" />
+    <meta name="author" content="Jefferson - DevsManager" />
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+    <link rel="canonical" href="https://devsmanager.com/contacto.html" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/contacto.html" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/contacto.html" />
+    <meta property="og:site_name" content="DevsManager" />
+    <meta property="og:url" content="https://devsmanager.com/contacto.html" />
+    <meta property="og:title" content="Contacto | DevsManager" />
+    <meta property="og:description" content="Agenda una consulta para definir tu roadmap de IA y automatizacion." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_EC" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1517048676732-d65bc937f952?w=1200&q=80" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contacto | DevsManager" />
+    <meta name="twitter:description" content="Hablemos de tu proyecto: IA, automatizacion y sistemas web orientados a conversion." />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1517048676732-d65bc937f952?w=1200&q=80" />
     <title>Contacto | DevsManager</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -108,5 +125,22 @@
     <script src="assets/js/layout.js" defer></script>
     <script src="assets/js/site.js" defer></script>
     <script src="assets/js/contacto.js" defer></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ContactPage",
+        "url": "https://devsmanager.com/contacto.html",
+        "name": "Contacto | DevsManager",
+        "description": "Canales de contacto para servicios de IA, automatizacion y sistemas web.",
+        "inLanguage": "es-EC",
+        "mainEntity": {
+          "@type": "Organization",
+          "name": "DevsManager",
+          "url": "https://devsmanager.com/",
+          "telephone": "+593959186832",
+          "email": "jefersonalvarez009@gmail.com"
+        }
+      }
+    </script>
   </body>
 </html>
