--- a/index.html
+++ b/index.html
@@ -6,13 +6,22 @@
     <meta name="description" content="DevsManager: IA, automatizacion y sistemas web a medida para negocios que quieren vender mejor y operar con menos friccion." />
     <meta name="keywords" content="agentes de IA, automatizacion, sistemas web, WhatsApp, Quito, Ecuador" />
     <meta name="author" content="Jefferson - DevsManager" />
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
     <meta name="theme-color" content="#070c1f" />
+    <link rel="canonical" href="https://devsmanager.com/" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/" />
+    <meta property="og:site_name" content="DevsManager" />
+    <meta property="og:url" content="https://devsmanager.com/" />
     <meta property="og:title" content="DevsManager | IA aplicada para negocios" />
     <meta property="og:description" content="Diseno e implemento automatizaciones, agentes de IA y sistemas web orientados a resultados." />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="es_EC" />
     <meta property="og:image" content="https://images.unsplash.com/photo-1677442136019-21780ecad995?w=1200&q=80" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DevsManager | IA aplicada para negocios" />
+    <meta name="twitter:description" content="Automatizacion, agentes de IA y sistemas web a medida para crecer sin caos operativo." />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1677442136019-21780ecad995?w=1200&q=80" />
     <title>DevsManager | IA y Automatizacion para negocios</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -157,12 +166,43 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "ProfessionalService",
-        "name": "DevsManager",
-        "description": "Automatizacion, agentes de IA y sistemas web para negocios.",
-        "areaServed": "Quito, Ecuador",
-        "telephone": "+593959186832",
-        "url": "https://devsmanager.com"
+        "@graph": [
+          {
+            "@type": "WebSite",
+            "@id": "https://devsmanager.com/#website",
+            "url": "https://devsmanager.com/",
+            "name": "DevsManager",
+            "inLanguage": "es-EC"
+          },
+          {
+            "@type": "ProfessionalService",
+            "@id": "https://devsmanager.com/#organization",
+            "name": "DevsManager",
+            "url": "https://devsmanager.com/",
+            "logo": "https://devsmanager.com/icono.png",
+            "image": "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=1200&q=80",
+            "telephone": "+593959186832",
+            "email": "jefersonalvarez009@gmail.com",
+            "areaServed": "Quito, Ecuador",
+            "description": "Automatizacion, agentes de IA y sistemas web para negocios.",
+            "sameAs": [
+              "https://wa.me/593959186832"
+            ]
+          },
+          {
+            "@type": "WebPage",
+            "@id": "https://devsmanager.com/#webpage",
+            "url": "https://devsmanager.com/",
+            "name": "DevsManager | IA y Automatizacion para negocios",
+            "isPartOf": {
+              "@id": "https://devsmanager.com/#website"
+            },
+            "about": {
+              "@id": "https://devsmanager.com/#organization"
+            },
+            "inLanguage": "es-EC"
+          }
+        ]
       }
     </script>
   </body>
