--- a/proceso.html
+++ b/proceso.html
@@ -4,6 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Proceso de trabajo de DevsManager: diagnostico, arquitectura, implementacion y optimizacion continua para soluciones con IA." />
+    <meta name="keywords" content="proceso de trabajo, implementacion IA, automatizacion por fases, consultoria tecnologica" />
+    <meta name="author" content="Jefferson - DevsManager" />
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+    <link rel="canonical" href="https://devsmanager.com/proceso.html" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/proceso.html" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/proceso.html" />
+    <meta property="og:site_name" content="DevsManager" />
+    <meta property="og:url" content="https://devsmanager.com/proceso.html" />
+    <meta property="og:title" content="Proceso de Trabajo | DevsManager" />
+    <meta property="og:description" content="Conoce las fases de ejecucion para implementar IA y automatizacion con riesgo controlado." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_EC" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?w=1200&q=80" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Proceso de Trabajo | DevsManager" />
+    <meta name="twitter:description" content="Metodologia clara para pasar de idea a sistema en produccion." />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?w=1200&q=80" />
     <title>Proceso de Trabajo | DevsManager</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -126,5 +143,15 @@
     <script src="assets/js/layout.js" defer></script>
     <script src="assets/js/site.js" defer></script>
     <script src="assets/js/proceso.js" defer></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "url": "https://devsmanager.com/proceso.html",
+        "name": "Proceso de Trabajo | DevsManager",
+        "description": "Fases de trabajo para implementar IA, automatizacion e integraciones en negocios.",
+        "inLanguage": "es-EC"
+      }
+    </script>
   </body>
 </html>
