--- a/servicios.html
+++ b/servicios.html
@@ -4,6 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Servicios de DevsManager: agentes de IA, automatizacion de procesos e implementacion de sistemas web orientados a negocio." />
+    <meta name="keywords" content="servicios IA, automatizacion de procesos, desarrollo web para negocios, integraciones, Quito Ecuador" />
+    <meta name="author" content="Jefferson - DevsManager" />
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+    <link rel="canonical" href="https://devsmanager.com/servicios.html" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/servicios.html" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/servicios.html" />
+    <meta property="og:site_name" content="DevsManager" />
+    <meta property="og:url" content="https://devsmanager.com/servicios.html" />
+    <meta property="og:title" content="Servicios de IA y Automatizacion | DevsManager" />
+    <meta property="og:description" content="Implementacion de agentes de IA, automatizacion e integraciones web para ventas y operacion." />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_EC" />
+    <meta property="og:image" content="https://images.unsplash.com/photo-1655635643486-a17bc48771ff?w=1200&q=80" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Servicios de IA y Automatizacion | DevsManager" />
+    <meta name="twitter:description" content="Soluciones tecnicas para vender mas y operar mejor con IA aplicada." />
+    <meta name="twitter:image" content="https://images.unsplash.com/photo-1655635643486-a17bc48771ff?w=1200&q=80" />
     <title>Servicios | DevsManager</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -180,5 +197,36 @@
     <script src="assets/js/layout.js" defer></script>
     <script src="assets/js/site.js" defer></script>
     <script src="assets/js/servicios.js" defer></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "url": "https://devsmanager.com/servicios.html",
+        "name": "Servicios | DevsManager",
+        "description": "Servicios de agentes de IA, automatizacion e implementacion de sistemas web para negocios.",
+        "inLanguage": "es-EC",
+        "mainEntity": {
+          "@type": "ItemList",
+          "name": "Servicios DevsManager",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Agentes de IA"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "Automatizacion de procesos"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "Sistemas web"
+            }
+          ]
+        }
+      }
+    </script>
   </body>
 </html>
