--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -4,6 +4,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Conoce a Jefferson de DevsManager: enfoque, especialidades y forma de trabajo para proyectos de IA y automatizacion." />
+    <meta name="keywords" content="Jefferson Alvarez, DevsManager, consultor IA, automatizacion para negocios, desarrollador web Quito" />
+    <meta name="author" content="Jefferson - DevsManager" />
+    <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+    <link rel="canonical" href="https://devsmanager.com/sobre-mi.html" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/sobre-mi.html" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/sobre-mi.html" />
+    <meta property="og:site_name" content="DevsManager" />
+    <meta property="og:url" content="https://devsmanager.com/sobre-mi.html" />
+    <meta property="og:title" content="Sobre Mi | DevsManager" />
+    <meta property="og:description" content="Perfil profesional, enfoque y capacidades de Jefferson para proyectos de IA y automatizacion." />
+    <meta property="og:type" content="profile" />
+    <meta property="og:locale" content="es_EC" />
+    <meta property="og:image" content="https://devsmanager.com/image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sobre Mi | DevsManager" />
+    <meta name="twitter:description" content="Consultoria tecnica en IA, automatizacion y sistemas web orientados a resultados." />
+    <meta name="twitter:image" content="https://devsmanager.com/image.png" />
     <title>Sobre Mi | DevsManager</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -141,5 +158,23 @@
     <script src="assets/js/layout.js" defer></script>
     <script src="assets/js/site.js" defer></script>
     <script src="assets/js/sobre-mi.js" defer></script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfilePage",
+        "url": "https://devsmanager.com/sobre-mi.html",
+        "name": "Sobre Mi | DevsManager",
+        "inLanguage": "es-EC",
+        "mainEntity": {
+          "@type": "Person",
+          "name": "Jefferson Alvarez",
+          "jobTitle": "Consultor en IA y Automatizacion",
+          "worksFor": {
+            "@type": "Organization",
+            "name": "DevsManager"
+          }
+        }
+      }
+    </script>
   </body>
 </html>
