Actualizo estilos actuales busqueda sin rutas

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="author" content="Jefferson - DevsManager" />
     <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
     <meta name="theme-color" content="#070c1f" />
-    <link rel="canonical" href="https://devsmanager.com/" />
-    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/" />
-    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/" />
+    <link rel="canonical" href="https://devsmanager.netlify.app/" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.netlify.app/" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.netlify.app/" />
     <meta property="og:site_name" content="DevsManager" />
-    <meta property="og:url" content="https://devsmanager.com/" />
+    <meta property="og:url" content="https://devsmanager.netlify.app/" />
     <meta property="og:title" content="DevsManager | IA aplicada para negocios" />
     <meta property="og:description" content="Diseno e implemento automatizaciones, agentes de IA y sistemas web orientados a resultados." />
     <meta property="og:type" content="website" />
@@ -48,8 +48,8 @@
               respuestas mas rapidas, menos carga operativa y una experiencia mas clara para tus clientes.
             </p>
             <div class="hero-actions">
-              <a class="btn btn-primary" href="contacto.html">Quiero una propuesta</a>
-              <a class="btn btn-secondary" href="servicios.html">Ver servicios</a>
+              <a class="btn btn-primary" href="/contacto">Quiero una propuesta</a>
+              <a class="btn btn-secondary" href="/servicios">Ver servicios</a>
             </div>
 
             <div class="kpi-grid">
@@ -98,19 +98,19 @@
               <div class="icon-chip"><i class="fa-solid fa-brain"></i></div>
               <h3>Agentes de IA orientados a conversion</h3>
               <p>Asistentes conectados a tu operacion real para responder, clasificar y dar seguimiento sin perder contexto.</p>
-              <a href="servicios.html">Ver detalle</a>
+              <a href="/servicios">Ver detalle</a>
             </article>
             <article class="service-card card" data-reveal>
               <div class="icon-chip"><i class="fa-solid fa-gears"></i></div>
               <h3>Automatizacion de procesos internos</h3>
               <p>Integro WhatsApp, formularios, CRM, correo y documentos para eliminar pasos manuales y errores recurrentes.</p>
-              <a href="servicios.html">Ver detalle</a>
+              <a href="/servicios">Ver detalle</a>
             </article>
             <article class="service-card card" data-reveal>
               <div class="icon-chip"><i class="fa-solid fa-laptop-code"></i></div>
               <h3>Sistemas web y experiencia UX</h3>
               <p>Desarrollo paginas y paneles con enfoque en claridad, conversion y velocidad para equipos y clientes.</p>
-              <a href="servicios.html">Ver detalle</a>
+              <a href="/servicios">Ver detalle</a>
             </article>
           </div>
         </div>
@@ -169,17 +169,17 @@
         "@graph": [
           {
             "@type": "WebSite",
-            "@id": "https://devsmanager.com/#website",
-            "url": "https://devsmanager.com/",
+            "@id": "https://devsmanager.netlify.app/#website",
+            "url": "https://devsmanager.netlify.app/",
             "name": "DevsManager",
             "inLanguage": "es-EC"
           },
           {
             "@type": "ProfessionalService",
-            "@id": "https://devsmanager.com/#organization",
+            "@id": "https://devsmanager.netlify.app/#organization",
             "name": "DevsManager",
-            "url": "https://devsmanager.com/",
-            "logo": "https://devsmanager.com/icono.png",
+            "url": "https://devsmanager.netlify.app/",
+            "logo": "https://devsmanager.netlify.app/icono.png",
             "image": "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=1200&q=80",
             "telephone": "+593959186832",
             "email": "jefersonalvarez009@gmail.com",
@@ -191,14 +191,14 @@
           },
           {
             "@type": "WebPage",
-            "@id": "https://devsmanager.com/#webpage",
-            "url": "https://devsmanager.com/",
+            "@id": "https://devsmanager.netlify.app/#webpage",
+            "url": "https://devsmanager.netlify.app/",
             "name": "DevsManager | IA y Automatizacion para negocios",
             "isPartOf": {
-              "@id": "https://devsmanager.com/#website"
+              "@id": "https://devsmanager.netlify.app/#website"
             },
             "about": {
-              "@id": "https://devsmanager.com/#organization"
+              "@id": "https://devsmanager.netlify.app/#organization"
             },
             "inLanguage": "es-EC"
           }
