--- a/servicios.html
+++ b/servicios.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="servicios IA, automatizacion de procesos, desarrollo web para negocios, integraciones, Quito Ecuador" />
     <meta name="author" content="Jefferson - DevsManager" />
     <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
-    <link rel="canonical" href="https://devsmanager.com/servicios.html" />
-    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/servicios.html" />
-    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/servicios.html" />
+    <link rel="canonical" href="https://devsmanager.netlify.app/servicios" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.netlify.app/servicios" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.netlify.app/servicios" />
     <meta property="og:site_name" content="DevsManager" />
-    <meta property="og:url" content="https://devsmanager.com/servicios.html" />
+    <meta property="og:url" content="https://devsmanager.netlify.app/servicios" />
     <meta property="og:title" content="Servicios de IA y Automatizacion | DevsManager" />
     <meta property="og:description" content="Implementacion de agentes de IA, automatizacion e integraciones web para ventas y operacion." />
     <meta property="og:type" content="website" />
@@ -201,7 +201,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "url": "https://devsmanager.com/servicios.html",
+        "url": "https://devsmanager.netlify.app/servicios",
         "name": "Servicios | DevsManager",
         "description": "Servicios de agentes de IA, automatizacion e implementacion de sistemas web para negocios.",
         "inLanguage": "es-EC",
