--- a/contacto.html
+++ b/contacto.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="contacto DevsManager, consulta IA, automatizacion para negocios, WhatsApp consultoria" />
     <meta name="author" content="Jefferson - DevsManager" />
     <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
-    <link rel="canonical" href="https://devsmanager.com/contacto.html" />
-    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/contacto.html" />
-    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/contacto.html" />
+    <link rel="canonical" href="https://devsmanager.netlify.app/contacto" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.netlify.app/contacto" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.netlify.app/contacto" />
     <meta property="og:site_name" content="DevsManager" />
-    <meta property="og:url" content="https://devsmanager.com/contacto.html" />
+    <meta property="og:url" content="https://devsmanager.netlify.app/contacto" />
     <meta property="og:title" content="Contacto | DevsManager" />
     <meta property="og:description" content="Agenda una consulta para definir tu roadmap de IA y automatizacion." />
     <meta property="og:type" content="website" />
@@ -129,14 +129,14 @@
       {
         "@context": "https://schema.org",
         "@type": "ContactPage",
-        "url": "https://devsmanager.com/contacto.html",
+        "url": "https://devsmanager.netlify.app/contacto",
         "name": "Contacto | DevsManager",
         "description": "Canales de contacto para servicios de IA, automatizacion y sistemas web.",
         "inLanguage": "es-EC",
         "mainEntity": {
           "@type": "Organization",
           "name": "DevsManager",
-          "url": "https://devsmanager.com/",
+          "url": "https://devsmanager.netlify.app/",
           "telephone": "+593959186832",
           "email": "jefersonalvarez009@gmail.com"
         }
