--- a/proceso.html
+++ b/proceso.html
@@ -7,11 +7,11 @@
     <meta name="keywords" content="proceso de trabajo, implementacion IA, automatizacion por fases, consultoria tecnologica" />
     <meta name="author" content="Jefferson - DevsManager" />
     <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
-    <link rel="canonical" href="https://devsmanager.com/proceso.html" />
-    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/proceso.html" />
-    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/proceso.html" />
+    <link rel="canonical" href="https://devsmanager.netlify.app/proceso" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.netlify.app/proceso" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.netlify.app/proceso" />
     <meta property="og:site_name" content="DevsManager" />
-    <meta property="og:url" content="https://devsmanager.com/proceso.html" />
+    <meta property="og:url" content="https://devsmanager.netlify.app/proceso" />
     <meta property="og:title" content="Proceso de Trabajo | DevsManager" />
     <meta property="og:description" content="Conoce las fases de ejecucion para implementar IA y automatizacion con riesgo controlado." />
     <meta property="og:type" content="website" />
@@ -131,7 +131,7 @@
             <div class="card pad-md" data-reveal>
               <h3>Lema de ejecucion</h3>
               <p>"Rapido para validar, solido para escalar."</p>
-              <a class="btn btn-primary btn-fit mt-md" href="contacto.html">Agendar llamada inicial</a>
+              <a class="btn btn-primary btn-fit mt-md" href="/contacto">Agendar llamada inicial</a>
             </div>
           </div>
         </div>
@@ -147,7 +147,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
-        "url": "https://devsmanager.com/proceso.html",
+        "url": "https://devsmanager.netlify.app/proceso",
         "name": "Proceso de Trabajo | DevsManager",
         "description": "Fases de trabajo para implementar IA, automatizacion e integraciones en negocios.",
         "inLanguage": "es-EC"
