--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -7,20 +7,20 @@
     <meta name="keywords" content="Jefferson Alvarez, DevsManager, consultor IA, automatizacion para negocios, desarrollador web Quito" />
     <meta name="author" content="Jefferson - DevsManager" />
     <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
-    <link rel="canonical" href="https://devsmanager.com/sobre-mi.html" />
-    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.com/sobre-mi.html" />
-    <link rel="alternate" hreflang="x-default" href="https://devsmanager.com/sobre-mi.html" />
+    <link rel="canonical" href="https://devsmanager.netlify.app/sobre-mi" />
+    <link rel="alternate" hreflang="es-EC" href="https://devsmanager.netlify.app/sobre-mi" />
+    <link rel="alternate" hreflang="x-default" href="https://devsmanager.netlify.app/sobre-mi" />
     <meta property="og:site_name" content="DevsManager" />
-    <meta property="og:url" content="https://devsmanager.com/sobre-mi.html" />
+    <meta property="og:url" content="https://devsmanager.netlify.app/sobre-mi" />
     <meta property="og:title" content="Sobre Mi | DevsManager" />
     <meta property="og:description" content="Perfil profesional, enfoque y capacidades de Jefferson para proyectos de IA y automatizacion." />
     <meta property="og:type" content="profile" />
     <meta property="og:locale" content="es_EC" />
-    <meta property="og:image" content="https://devsmanager.com/image.png" />
+    <meta property="og:image" content="https://devsmanager.netlify.app/image.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Sobre Mi | DevsManager" />
     <meta name="twitter:description" content="Consultoria tecnica en IA, automatizacion y sistemas web orientados a resultados." />
-    <meta name="twitter:image" content="https://devsmanager.com/image.png" />
+    <meta name="twitter:image" content="https://devsmanager.netlify.app/image.png" />
     <title>Sobre Mi | DevsManager</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -146,7 +146,7 @@
             <div class="card pad-md" data-reveal>
               <h3>Lema de trabajo</h3>
               <p>"Tecnologia util, simple de operar y lista para crecer con tu negocio."</p>
-              <a class="btn btn-primary btn-fit mt-md" href="contacto.html">Trabajemos juntos</a>
+              <a class="btn btn-primary btn-fit mt-md" href="/contacto">Trabajemos juntos</a>
             </div>
           </div>
         </div>
@@ -162,7 +162,7 @@
       {
         "@context": "https://schema.org",
         "@type": "ProfilePage",
-        "url": "https://devsmanager.com/sobre-mi.html",
+        "url": "https://devsmanager.netlify.app/sobre-mi",
         "name": "Sobre Mi | DevsManager",
         "inLanguage": "es-EC",
         "mainEntity": {
